# neocalc

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
include/neocalc/ui/: ui.hpp
include/neomath/: neomath.hpp
src/neocalc/: main.cpp
src/neocalc/ui/: ui.cpp
tests/: CMakeLists.txt
tests/neomath/: neomath_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/neomath/: neomath_unit.cpp
